# OpenTelemetry-StarterProject

./: BUILD  CMakeLists.txt  README.md  WORKSPACE  clear_bazel.sh  clear_cmake.sh  exporters.cc  exporters.h  foodfinder.cc  foodfinder.h  foodsupplier.cc  foodsupplier.h  foodsystem.proto  foodsystem_client.cc  foodsystem_server.cc  foodvendor.cc  foodvendor.h
cmake/: FindGRPC.cmake
foodsystem/: CMakeLists.txt  foodsystem_client.cc  foodsystem_server.cc
protos/: CMakeLists.txt  foodsystem.proto
scripts/: bazel_build.sh  foodfinder.sh  foodsupplier.sh  stack_foodvendor.sh
